--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,13 +4,18 @@
  * the Grunt configuration that is automatically processed.
  */
 
-
+/**
+ * First, we include the Font Awesome SASS FILES. Only the ones used in the
+ * project should be imported as the rest are just wasting space.
+ */
+@import '../../vendor/fontawesome/scss/font-awesome.scss';
 /**
  * First, we include the Twitter Bootstrap LESS files. Only the ones used in the
  * project should be imported as the rest are just wasting space.
  */
 
-@import '../../vendor/bootstrap/less/bootstrap.less';
+
+@import '../../vendor/bootstrap-sass-official/assets/stylesheets/_bootstrap.scss';
 
 
 /**
@@ -18,7 +23,7 @@
  * definitions in our imported stylesheets.
  */
 
-@import 'variables.less';
+@import 'variables.sass';
 
 
 /**
@@ -98,13 +103,12 @@ h2 {
       margin-left: 20px;
 
       a, a:visited {
-        color: @gray-light;
+        color: #ccc;
         text-decoration: none;
         font-size: 40px;
-        .transition( 250ms ease-in-out );
 
         &:hover {
-          color: @gray;
+          color: #ddd;
         }
       }
     }
@@ -119,5 +123,5 @@ h2 {
  * TODO: In a later version of this boilerplate, I'd like to automate this.
  */
 
-@import '../app/home/home.less';
+@import '../app/home/home.scss';
 
